// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container: LabelContent should render correct ContentCheckmarkRadio layout based on props 1`] = `
<Connect(ContentCheckmarkRadio)
  label={
    Label {
      "confidence": 0.66,
      "content": true,
      "fieldCode": "enclosures",
      "h": 0.0119,
      "index": undefined,
      "meta": Object {
        "data": "some meta for enclosures value label",
      },
      "type": "checkmark",
      "typeName": "label",
      "uid": "2",
      "w": 0.017,
      "x": 0.113,
      "y": 0.8104,
    }
  }
/>
`;

exports[`Container: LabelContent should render correct ContentEnum layout based on props 1`] = `
<Connect(ContentEnum)
  label={
    Label {
      "confidence": 0.66,
      "content": "test",
      "fieldCode": "enum",
      "h": 0.0119,
      "index": undefined,
      "meta": Object {
        "data": "some meta for enum value label",
      },
      "type": "enum",
      "typeName": "label",
      "uid": "3",
      "w": 0.017,
      "x": 0.113,
      "y": 0.8104,
    }
  }
/>
`;

exports[`Container: LabelContent should render correct ContentTextArea layout based on props 1`] = `
<Connect(ContentTextArea)
  label={
    Label {
      "confidence": 0.66,
      "content": "hello world",
      "fieldCode": "enclosures",
      "h": 0.0119,
      "index": undefined,
      "meta": Object {
        "data": "some meta for enclosures value label",
      },
      "type": "string",
      "typeName": "label",
      "uid": "1",
      "w": 0.017,
      "x": 0.113,
      "y": 0.8104,
    }
  }
/>
`;
